[package]
description = "Converts HTTP requests into multiplexed gRPC-like calls / 将 HTTP 请求转换为多路复用的 gRPC 式调用"
edition = "2024"
homepage = "https://github.com/js0-site/rust/tree/dev/http_grpc"
keywords = ["http", "grpc", "rpc", "multiplex", "async"]
license = "MulanPSL-2.0"
name = "http_grpc"
repository = "https://github.com/js0-site/rust.git"
version = "0.1.30"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
anyhow = "1.0.100"
pilota-build = "0.12.15"

[dependencies]
anyhow = "1.0.100"
aok = "0.1.18"
bytes = "1.10.1"
futures-util = "0.3.31"
http-body-util = "0.1.3"
log = "0.4.28"
num-traits = "0.2.19"
pilota = "0.12.3"
thiserror = "2.0.17"
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
volo-http = "0.4.3"
xbin = "0.1.9"
xerr = "0.1.16"

[dependencies.tokio]
version = "1.48"
features = ["rt"]


[dependencies.xrpc]
features = ["volo-http"]
version = "0.1.39"

[dev-dependencies]
log = "0.4.28"
static_init = "1.0.4"
dashmap = "6.1.0"
http = "1.3"
log_init = "0.1.27"

[dev-dependencies.tokio]
version = "1.48"
features = ["full"]


[features]
default = []